<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- ========================================== -->
    <!-- Project Coordinates                        -->
    <!-- ========================================== -->
    <groupId>org.dvsa.testing.framework</groupId>
    <artifactId>vol-api-calls</artifactId>
    <version>4.0.1-SNAPSHOT</version>

    <!-- ========================================== -->
    <!-- Properties                                 -->
    <!-- ========================================== -->
    <properties>
        <!-- Build Configuration -->
        <java.version>21</java.version>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.version>3.11.0</maven.compiler.version>

        <!-- DVSA Internal Libraries -->
        <active-support.version>2.15.4</active-support.version>
        <uri-constructor.version>2.4.0</uri-constructor.version>

        <!-- Testing & API Libraries -->
        <rest-assured.version>5.4.0</rest-assured.version>

        <!-- HTTP Client -->
        <apache-http.version>5.5.1</apache-http.version>

        <!-- Utilities -->
        <commons-lang3.version>3.18.0</commons-lang3.version>

        <!-- JWT Processing -->
        <jjwt.version>0.13.0</jjwt.version>

        <!-- Logging - Updated to fix security vulnerability -->
        <log4j-api.version>2.25.4</log4j-api.version>
        <log4j-core.version>2.25.4</log4j-core.version>

        <!-- AWS Maven Extension -->
        <aws-maven.version>5.0.0.RELEASE</aws-maven.version>

        <!-- Repository Configuration -->
        <github.url>https://maven.pkg.github.com/dvsa/vol-api-calls</github.url>
    </properties>

    <!-- ========================================== -->
    <!-- Dependency Management (Security Overrides) -->
    <!-- ========================================== -->
    <dependencyManagement>
        <dependencies>
            <!-- ================================== -->
            <!-- Security Fixes - Override Transitive Dependencies -->
            <!-- ================================== -->

            <!-- Fix Netty vulnerabilities from AWS SDK -->
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-codec-http2</artifactId>
                <version>4.1.132.Final</version>
            </dependency>

            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-codec-http</artifactId>
                <version>4.1.132.Final</version>
            </dependency>

            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-common</artifactId>
                <version>4.1.129.Final</version>
            </dependency>

            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-handler</artifactId>
                <version>4.1.129.Final</version>
            </dependency>

            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-transport</artifactId>
                <version>4.1.129.Final</version>
            </dependency>

            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-buffer</artifactId>
                <version>4.1.129.Final</version>
            </dependency>

            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-codec</artifactId>
                <version>4.1.129.Final</version>
            </dependency>

            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-resolver</artifactId>
                <version>4.1.129.Final</version>
            </dependency>

            <!-- Fix Commons IO vulnerability -->
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.15.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- ========================================== -->
    <!-- Profiles                                   -->
    <!-- ========================================== -->
    <profiles>
        <profile>
            <id>github</id>

            <!-- ================================== -->
            <!-- Repositories                       -->
            <!-- ================================== -->
            <repositories>
                <!-- Maven Central Repository -->
                <repository>
                    <id>central</id>
                    <url>https://repo1.maven.org/maven2</url>
                    <releases>
                        <enabled>true</enabled>
                    </releases>
                    <snapshots>
                        <enabled>true</enabled>
                    </snapshots>
                </repository>

                <!-- DVSA GitHub Packages -->
                <repository>
                    <id>dvsa-github-packages</id>
                    <name>GitHub DVSA Apache Maven Packages</name>
                    <url>https://maven.pkg.github.com/dvsa/*</url>
                    <releases>
                        <enabled>true</enabled>
                    </releases>
                    <snapshots>
                        <enabled>true</enabled>
                    </snapshots>
                </repository>
            </repositories>

            <!-- ================================== -->
            <!-- Distribution Management            -->
            <!-- ================================== -->
            <distributionManagement>
                <repository>
                    <id>github-publish</id>
                    <name>GitHub DVSA Apache Maven Packages</name>
                    <url>${github.url}</url>
                    <releases>
                        <enabled>true</enabled>
                    </releases>
                    <snapshots>
                        <enabled>true</enabled>
                    </snapshots>
                </repository>
            </distributionManagement>

            <!-- ================================== -->
            <!-- Profile Activation                 -->
            <!-- ================================== -->
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
    </profiles>

    <!-- ========================================== -->
    <!-- Build Configuration                        -->
    <!-- ========================================== -->
    <build>
        <!-- ================================== -->
        <!-- Build Extensions                   -->
        <!-- ================================== -->
        <extensions>
            <!-- AWS Maven Extension for S3 Deploy -->
            <extension>
                <groupId>org.springframework.build</groupId>
                <artifactId>aws-maven</artifactId>
                <version>${aws-maven.version}</version>
            </extension>
        </extensions>

        <!-- ================================== -->
        <!-- Build Plugins                      -->
        <!-- ================================== -->
        <plugins>
            <!-- Java Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- ========================================== -->
    <!-- Dependencies                               -->
    <!-- ========================================== -->
    <dependencies>

        <!-- ====================================== -->
        <!-- DVSA Internal Libraries                -->
        <!-- ====================================== -->

        <!-- Active Support - DVSA Test Framework -->
        <dependency>
            <groupId>org.dvsa.testing.lib</groupId>
            <artifactId>active-support</artifactId>
            <version>${active-support.version}</version>
        </dependency>

        <!-- VOL URI Constructor - DVSA Internal -->
        <dependency>
            <groupId>org.dvsa.testing.lib</groupId>
            <artifactId>vol-uri-constructor</artifactId>
            <version>${uri-constructor.version}</version>
        </dependency>

        <!-- ====================================== -->
        <!-- Testing & API Libraries                -->
        <!-- ====================================== -->

        <!-- REST Assured - API Testing Framework -->
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>${rest-assured.version}</version>
        </dependency>

        <!-- ====================================== -->
        <!-- HTTP Client                            -->
        <!-- ====================================== -->

        <!-- Apache HTTP Client 5 - Modern HTTP -->
        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
            <version>${apache-http.version}</version>
        </dependency>

        <!-- ====================================== -->
        <!-- JWT Processing                         -->
        <!-- ====================================== -->

        <!-- JJWT API - JWT Processing Interface -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>${jjwt.version}</version>
        </dependency>

        <!-- JJWT Implementation - JWT Processing -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>${jjwt.version}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- JJWT Jackson - JSON Processing for JWT -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>${jjwt.version}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- ====================================== -->
        <!-- Utilities                              -->
        <!-- ====================================== -->

        <!-- Apache Commons Lang3 - String Utils -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>

        <!-- ====================================== -->
        <!-- Logging                                -->
        <!-- ====================================== -->

        <!-- Log4j API - Logging Interface -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j-api.version}</version>
        </dependency>

        <!-- Log4j Core - Logging Implementation -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j-core.version}</version>
        </dependency>

    </dependencies>

</project>
